# Agro

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  code_style.md  embed_resource.py  generate_byte_lookup_table.py  make.bat  run_tests.py
examples/: CMakeLists.txt  box.cpp  callbacks.cpp  code_edit.cpp  custom_widget_drawing.cpp  custom_widget_styling.cpp  image.cpp  keybindings.cpp  label.cpp  line_edit.cpp  lineedit.cpp  note_book.cpp  resources.cpp  resources.hpp  splitter.cpp  text_edit.cpp  tooltips.cpp  tree_view.cpp  tree_view_lines.cpp  treeview.cpp  widget_gallery.cpp  windows.cpp
examples/complex_treeview/: contacts2021.db
examples/complex_treeview/src/: database.hpp  flag.hpp  main.cpp
examples/treeview/: Makefile
examples/treeview/include/glad/: glad.h
examples/treeview/include/gui/: option.hpp  state.hpp  util.hpp  window.hpp
examples/treeview/include/gui/common/: color.hpp  enums.hpp  style.hpp
examples/treeview/include/gui/controls/: image.hpp  notebook.hpp  scrollable.hpp  simplescrollbar.hpp  spacer.hpp  treeview.hpp  widget.hpp
examples/treeview/include/gui/renderer/: batch.hpp  drawing_context.hpp  font.hpp  renderer.hpp  texture.hpp
examples/treeview/src/: contact.hpp  flag.hpp  main.cpp
gimp/: check_button_checked.xcf  check_button_unchecked.xcf  close.xcf  close_thin.xcf  color_picker_gradient.xcf  directory.xcf  file.xcf  radio_button_background.xcf  radio_button_checked.xcf  radio_button_unchecked.xcf  scrollbar_arrow.xcf  table_layout.xcf  tree_layout.xcf  up_arrow.xcf
msvc_lib/: SDL2main.lib
msvc_lib/FreeType2/: freetype.lib
shaders/: batch_colored_quad.glsl.frag  batch_colored_quad.glsl.vert  batch_text_quad.glsl.frag  batch_text_quad.glsl.vert  fshader.glsl
src/: app.cpp  app.hpp  application.cpp  application.hpp  custom_style.hpp  custom_widget.hpp  drawable.cpp  drawable.hpp  event.hpp  keyboard.hpp  main.cpp  option.hpp  resources.cpp  resources.hpp  result.hpp  slice.hpp  state.hpp  stop_watch.hpp  timer.cpp  timer.hpp  tree.hpp  util.cpp  util.hpp  window.cpp  window.hpp
src/common/: align.hpp  color.h  color.hpp  enums.hpp  expect.hpp  fill.hpp  number_types.h  point.h  point.hpp  rect.hpp  size.h  size.hpp  style.cpp  style.hpp
src/controls/: box.cpp  box.hpp  button.cpp  button.hpp  cell_renderer.cpp  cell_renderer.hpp  cellrenderer.cpp  cellrenderer.hpp  check_button.cpp  check_button.hpp  code_edit.cpp  code_edit.hpp  color_picker.cpp  color_picker.hpp  combo_box.cpp  combo_box.hpp  drop_down.cpp  drop_down.hpp  group_box.cpp  group_box.hpp  icon_button.cpp  icon_button.hpp  image.cpp  image.hpp  label.cpp  label.hpp  line_edit.cpp  line_edit.hpp  lineedit.cpp  lineedit.hpp  list.cpp  list.hpp  new_widget.hpp  note_book.cpp  note_book.hpp  notebook.cpp  notebook.hpp  progress_bar.cpp  progress_bar.hpp  radio_button.cpp  (+32 more)
src/core/: array_list.hpp  box.hpp  fs.hpp  hash_map.hpp  intrinsics.hpp  string.cpp  string.hpp
src/renderer/: drawing_context.cpp  drawing_context.hpp  font.cpp  font.hpp  glad.c  glad.h  line.hpp  my_shader.hpp  quad.hpp  quad_renderer.cpp  quad_renderer.hpp  renderer.cpp  renderer.hpp  resource_manager.h  shader.h  shader.hpp  text_renderer.cpp  text_renderer.h  text_renderer.hpp  texture.cpp  texture.h  texture.hpp
test/: box_horizontal.cpp  box_vertical.cpp  layout.cpp
tests/: CMakeLists.txt  array_list.cpp  box_horizontal.cpp  box_vertical.cpp  callbacks.cpp  clip.cpp  color.cpp  complex_clipping.cpp  fs.cpp  hash_map.cpp  headless.hpp  keybindings.cpp  lineedit_search.cpp  note_book.cpp  notebook.cpp  one_million_buttons.cpp  one_million_labels.cpp  scrolled_box_both.cpp  scrolled_box_inception_clipping.cpp  scrolled_box_inner.cpp  scrolled_box_outer.cpp  scrolledbox_both.cpp  scrolledbox_inception_clipping.cpp  scrolledbox_inner.cpp  scrolledbox_outer.cpp  simd.cpp  string.cpp  tree_traversal.cpp
