option(BUILD_EXAMPLE_BOX "Build example box.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_CALLBACKS "Build example callbacks.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_CODE_EDIT "Build example code_edit.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_CUSTOM_WIDGET_DRAWING "Build example custom_widget_drawing.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_CUSTOM_WIDGET_STYLING "Build example custom_widget_styling.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_IMAGE "Build example image.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_KEYBINDINGS "Build example keybindings.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_LABEL "Build example label.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_TEXT_EDIT "Build example text_edit.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_NOTE_BOOK "Build example note_book.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_SPLITTER "Build example splitter.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_TOOLTIPS "Build example tooltips.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_TREE_VIEW "Build example tree_view.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_TREE_VIEW_LINES "Build example tree_view_lines.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_WIDGET_GALLERY "Build example widget_gallery.cpp" ${BUILD_ALL_EXAMPLES})
option(BUILD_EXAMPLE_WINDOWS "Build example windows.cpp" ${BUILD_ALL_EXAMPLES})

set(examples "")
if(BUILD_EXAMPLE_BOX)
	list(APPEND examples "box.cpp")
endif()
if(BUILD_EXAMPLE_CALLBACKS)
	list(APPEND examples "callbacks.cpp")
endif()
if(BUILD_EXAMPLE_CODE_EDIT)
	list(APPEND examples "code_edit.cpp")
endif()
if(BUILD_EXAMPLE_CUSTOM_WIDGET_DRAWING)
	list(APPEND examples "custom_widget_drawing.cpp")
endif()
if(BUILD_EXAMPLE_CUSTOM_WIDGET_STYLING)
	list(APPEND examples "custom_widget_styling.cpp")
endif()
if(BUILD_EXAMPLE_IMAGE)
	list(APPEND examples "image.cpp")
endif()
if(BUILD_EXAMPLE_KEYBINDINGS)
	list(APPEND examples "keybindings.cpp")
endif()
if(BUILD_EXAMPLE_LABEL)
	list(APPEND examples "label.cpp")
endif()
if(BUILD_EXAMPLE_TEXT_EDIT)
	list(APPEND examples "text_edit.cpp")
endif()
if(BUILD_EXAMPLE_NOTE_BOOK)
	list(APPEND examples "note_book.cpp")
endif()
if(BUILD_EXAMPLE_SPLITTER)
	list(APPEND examples "splitter.cpp")
endif()
if(BUILD_EXAMPLE_TOOLTIPS)
	list(APPEND examples "tooltips.cpp")
endif()
if(BUILD_EXAMPLE_TREE_VIEW)
	list(APPEND examples "tree_view.cpp")
endif()
if(BUILD_EXAMPLE_TREE_VIEW_LINES)
	list(APPEND examples "tree_view_lines.cpp")
endif()
if(BUILD_EXAMPLE_WIDGET_GALLERY)
	list(APPEND examples "widget_gallery.cpp")
endif()
if(BUILD_EXAMPLE_WINDOWS)
	list(APPEND examples "windows.cpp")
endif()

foreach(example ${examples})
	get_filename_component(example_name ${example} NAME_WE)
	add_executable("example_${example_name}" ${example} resources.cpp)
	if (AVX2)
		target_compile_definitions("example_${example_name}" PRIVATE "AVX2")
	elseif (SSE2)
		target_compile_definitions("example_${example_name}" PRIVATE "SSE2")
	endif ()
	set_target_properties("example_${example_name}" PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/bin"
		RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/bin"
		RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/bin"
	)
	target_link_libraries("example_${example_name}" ${PROJECT_NAME})
endforeach()
